hphp/test/zend/good/Zend/tests/generators/errors/generator_extend_error.php.expectf

Fatal error: Class ExtendedGenerator may not inherit from final class (Generator) in %s/generator_extend_error.php on line 3
